# hetriever

./: .gitignore  .gitmodules  AGENTS.md  README.md  justfile  main.py  pyproject.toml
.specify/memory/: constitution.md
specs/001-hetriever-stands-for/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hetriever-stands-for/contracts/: chromadb-contract.md  cleaning-contract.md  cli-contract.md
src/cleaner/: __init__.py  cleaner.py
src/cleaning/: __init__.py  code_fences.py  frontmatter.py  links.py  patterns.py  pipeline.py  shortcodes.py  whitespace.py
src/cli/: formatters.py  main.py
src/cli/commands/: index.py  list.py  remove.py  search.py
src/models/: collection.py  document.py  repository.py  retrieval.py
src/processing/: chunker.py  context_extractor.py  file_discovery.py  indexer.py  metadata.py
src/storage/: __init__.py  chromadb_client.py
tests/benchmarks/: test_cleaning_performance.py  test_indexing_performance.py  test_memory_usage.py  test_search_performance.py
tests/contract/: test_chromadb_contract.py  test_cleaning_contract.py
tests/integration/: test_cli_contract_validation.py  test_error_handling.py  test_indexing_workflow.py  test_performance_baselines.py  test_repository_management.py  test_search_workflow.py
tests/property/: test_cleaning_properties.py
tests/unit/: test_cleaning_edge_cases.py
